gccida/g1/combine_stack_adjustments
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_stack_adjustments/src/regmove.c:2647:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( __int64)v10[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_stack_adjustments/src/regmove.c:2696:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)memref->fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_stack_adjustments/src/regmove.c:2713:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( ( unsigned __int8 *)memref + 2), global_rtl[2]) ) 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/combine_stack_adjustments/src/obj/regmove.o] Error 1
